[gd_scene load_steps=12 format=2]

[ext_resource path="res://ressources/script/SaveFileDialog.gd" type="Script" id=1]
[ext_resource path="res://ressources/fonts/ebrima.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://ressources/btn_ui/cancel_savefiledialog_hover.png" type="Texture" id=3]
[ext_resource path="res://ressources/btn_ui/cancel_savefiledialog_normal.png" type="Texture" id=4]
[ext_resource path="res://ressources/btn_ui/cancel_savefiledialog_pressed.png" type="Texture" id=5]
[ext_resource path="res://ressources/scene/uth/components/combo_box.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.694118, 0.694118, 0.694118, 1 )

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.188235, 0.188235, 0.188235, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.258824, 0.258824, 0.258824, 1 )

[sub_resource type="DynamicFont" id=5]
size = 18
font_data = ExtResource( 2 )

[node name="SaveFileDialog" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="panel_title" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -551.0
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )

[node name="label_title" type="Label" parent="panel_title"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -177.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Title"

[node name="texture_button_exit" type="TextureButton" parent="panel_title"]
anchor_left = 0.956
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -7.03203
margin_right = 1.0
size_flags_horizontal = 3
size_flags_vertical = 2
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 3 )
stretch_mode = 3

[node name="panel_body" type="Panel" parent="."]
anchor_left = -0.00195313
anchor_top = 0.0883333
anchor_right = 0.99707
anchor_bottom = 0.996667
custom_styles/panel = SubResource( 3 )

[node name="panel_containers_file_directories" type="PanelContainer" parent="panel_body"]
anchor_left = 0.171066
anchor_top = 0.146789
anchor_right = 1.00391
anchor_bottom = 0.998165
margin_right = -2.1045e-05
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="panel_body/panel_containers_file_directories"]
margin_left = 7.0
margin_top = 7.0
margin_right = 844.999
margin_bottom = 457.0

[node name="PanelContainer" type="PanelContainer" parent="panel_body"]
anchor_right = 0.999
anchor_bottom = 0.149
margin_left = 1.00001
margin_top = -2.99998
margin_right = 5.02293
margin_bottom = -3.20498
custom_styles/panel = SubResource( 4 )

[node name="panel_informations" type="Panel" parent="panel_body"]
anchor_top = 0.152294
anchor_right = 0.171065
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Vertica_Container" type="VBoxContainer" parent="panel_body/panel_informations"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="label_title" type="Label" parent="panel_body/panel_informations/Vertica_Container"]
margin_right = 174.0
margin_bottom = 25.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "Exporting Score as"
align = 1
valign = 1

[node name="combo_box" parent="panel_body/panel_informations/Vertica_Container" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 29.0
margin_right = 174.0
margin_bottom = 29.0
_does_user_can_add_item = false

[node name="textedit_path" type="TextEdit" parent="panel_body"]
anchor_left = 0.173998
anchor_top = 0.0201835
anchor_right = 0.997068
anchor_bottom = 0.111927
__meta__ = {
"_edit_use_anchors_": true
}

[node name="button_save" type="Button" parent="."]
margin_left = 62.0
margin_top = 441.0
margin_right = 103.0
margin_bottom = 461.0
text = "Save"

[connection signal="pressed" from="panel_title/texture_button_exit" to="." method="_on_texture_button_exit_pressed"]
[connection signal="_on_text_changed" from="panel_body/panel_informations/Vertica_Container/combo_box" to="." method="_on_combo_box__on_text_changed"]
[connection signal="text_changed" from="panel_body/textedit_path" to="." method="_on_textedit_path_text_changed"]
[connection signal="pressed" from="button_save" to="." method="_on_button_save_pressed"]
